Refactor: use collections in Wikipedia service